--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@ Start your code from here
     <img src="game1.png"></a>
 <p>Need for speed</p>
 </div>
+<div class="item">
+  <a id="game3" href="https://studio.code.org/projects/gamelab/8i_Dg73VTAzVGEYu9WvH2lKAGsqCPeX973suhW89m3w">
+    <img src="game3.png">
+  </a>
+  <p>Spaceship Game</p>
+  
+</div>
 </div>
 <a class="left carousel-control" href="#myCarousel" data-slide="prev">
   <span class="glyphicon glyphicon-chevron-left">
